namespace CNM.Domain.Models
{
    public class ImdbTitleResponse
    {
        public string title { get; set; }
        public string id { get; set; }
        public string stars { get; set; }
        public string releaseDate { get; set; }
    }
}
