@startuml
skinparam packageStyle rectangle
skinparam shadowing false

title CinemaServicesManager Solution Structure

package "CNM.Domain" {
  package "Database" {
    class DatabaseContext
    package "Entities" {
      class ShowtimeEntity
      class MovieEntity
      class AuditoriumEntity
    }
  }
  package "Interfaces" {
    interface IShowtimesRepository
    interface IImdbClient
  }
  package "Repositories" {
    class ShowtimesRepository
  }
  package "Clients" {
    class ImdbClient
  }
  package "Models" {
    class ImdbTitleResponse
  }
}

package "CNM.Showtimes.API" {
    class ShowtimesStartup
    class ShowtimeController
    package "Services" {
    class ImdbStatusBackgroundService
    class CustomAuthenticationTokenService
  }
}

package "CNM.Movies.API" {
  class MoviesStartup
  class MoviesController
}

package "CNM.Gateway.API" {
  class GatewayStartup
  class GatewayController
}

package "CNM.Application" {
  class ApplicationStartup
}

package "CNM.Application.Tests" {
  class ApplicationTests
}

package "CNM.Showtimes.Tests" {
  class ShowtimesTests
}

package "CNM.Movies.Tests" {
  class MoviesTests
}


package "CNM.Gateway.Tests" {
  class GatewayTests
}

ImdbClient --> ImdbTitleResponse : uses
IImdbClient <|.. ImdbClient : implements
MoviesTests --> ImdbTitleResponse : uses

ShowtimeController --> IImdbClient : uses
ShowtimeController --> IShowtimesRepository : uses (Domain.Interfaces)
ShowtimesRepository --> DatabaseContext : uses
ShowtimesRepository --> ShowtimeEntity : operates on
ShowtimesRepository --> MovieEntity : operates on
ShowtimesRepository --> AuditoriumEntity : operates on
IShowtimesRepository <|.. ShowtimesRepository : implements
ImdbStatusBackgroundService --> IImdbClient : uses

MoviesController --> IImdbClient : uses
MoviesStartup ..> MoviesController : DI registers
MoviesStartup ..> ImdbClient : DI registers (Domain.Clients)

ShowtimesStartup ..> ShowtimeController : DI registers
ShowtimesStartup ..> ImdbClient : DI registers (Domain.Clients)
ShowtimesStartup ..> ShowtimesRepository : DI registers
ShowtimesStartup ..> IShowtimesRepository : binds

ApplicationTests ..> ApplicationStartup
ApplicationTests ..> DatabaseContext
ApplicationTests ..> IShowtimesRepository
ApplicationTests ..> ShowtimeEntity
ApplicationTests ..> MovieEntity

ShowtimesTests ..> ShowtimesStartup
ShowtimesTests ..> ShowtimeController

MoviesTests ..> MoviesController
MoviesTests ..> MoviesStartup

GatewayTests ..> GatewayController
GatewayTests ..> GatewayStartup
GatewayStartup ..> GatewayController : DI registers

note bottom of DatabaseContext
EF Core InMemory in dev/test
end note

@enduml